<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Report">

    <Spinner
        android:id="@+id/eMonth"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/sMonth"
        app:layout_constraintStart_toStartOf="@+id/sMonth"
        app:layout_constraintTop_toBottomOf="@+id/sMonth" />

    <Spinner
        android:id="@+id/eYear"
        android:layout_width="121dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/sYear"
        app:layout_constraintStart_toStartOf="@+id/sYear"
        app:layout_constraintTop_toBottomOf="@+id/sYear"/>

    <Spinner
        android:id="@+id/sYear"
        android:layout_width="121dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/sMonth"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Report"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="From:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="To:"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Total Spending"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="Total Income"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/viewTransBtn"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/piechart" />

    <TextView
        android:id="@+id/TotSpendDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="$ 0.00"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/TotIncDisp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/TotIncDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="$ 0.00"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <Spinner
        android:id="@+id/sMonth"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bar_chart_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TotIncDisp"/>

    <com.github.mikephil.charting.charts.PieChart
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:id="@+id/piechart">

    </com.github.mikephil.charting.charts.PieChart>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation" />

    <Button
        android:id="@+id/submit"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="OK"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/eYear"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewTransBtn"
        android:layout_width="115dp"
        android:layout_height="62dp"
        android:layout_marginEnd="16dp"
        android:onClick="onClick_viewTrans"
        android:text="View Transaction History"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/TotIncDisp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>